[gd_scene load_steps=2 format=3 uid="uid://d6pvjx5qicyu"]

[ext_resource type="Script" uid="uid://b856uu3gnttim" path="res://ActionManager.gd" id="1_vtobp"]

[node name="ActionUI" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_vtobp")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Escape" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Escape Jail (-1 Ticket)"

[node name="Dice" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Roll Die"

[node name="Special" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Roll Special Die"

[node name="Group" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Group Rule (Cost)"

[node name="End" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "End Turn"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Escape" to="." method="_on_escape_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Dice" to="." method="_on_dice_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Special" to="." method="_on_special_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/End" to="." method="_on_end_pressed"]
